# shape_game_cpp

./: .Makefile.swp  .gitignore  .main.cpp.swp  3  App.cpp  App.hpp  CMakeLists.txt  CollisionTree.cpp  Color.cpp  Component.cpp  DEV_LOG.md  Debug.hpp  DebugKeyHandler.cpp  Drawable.cpp  Entity.cpp  FileUtil.cpp  FileUtil.hpp  GLHandler.cpp  GLHandler.hpp  GLHandler.pre  GLHandlerImpl.cpp  GLRenderObject.cpp  Game.cpp  Globals.cpp  Globals.hpp  Input.cpp  LICENSE  MacMakefile  Makefile  MultiShape.cpp  NullRenderer.cpp  NullWindow.cpp  Object.cpp  Point.cpp  Position.cpp  Quad.cpp  README.md  Rectangle.cpp  RenderPackage.cpp  Scene.cpp  (+37 more)
deletion.test.dSYM/Contents/: Info.plist
dist-libs/platform/win/: shapegame.lib
examples/: a-lot-of-kills.test.cpp  add-child-as.cpp  busy-highway.test.cpp  circle.test.cpp  debug-keyhandler.test.cpp  deletion.test.cpp  kill-sub-shape  kill-sub-shape.cpp  main.cpp  main.test.cpp  minimal-example.test.cpp  mouse-move.test.cpp  multi.test.cpp  rect.test.cpp  road.test.cpp  simple-kill.test.cpp  snake-circles.test.cpp  snake-triangle.test.cpp  snake.test.cpp  triangle.test.cpp
include/: Circle.hpp  CollisionList.hpp  CollisionTree.hpp  Color.hpp  Component.hpp  DebugKeyHandler.hpp  Dirtyable.hpp  Drawable.hpp  Entity.hpp  GLHandler.hpp  GLHandlerImpl.hpp  GLRenderObject.hpp  Game.hpp  GameObject.hpp  Globals.hpp  Input.hpp  MultiShape.hpp  NullRenderer.hpp  NullWindow.hpp  Object.hpp  Point.hpp  Position.hpp  Quad.hpp  Rectangle.hpp  RenderPackage.hpp  Scene.hpp  Shape.hpp  ShapePair.hpp  SimpleCollision.hpp  Square.hpp  Timer.hpp  Triangle.hpp  TriangleIsosceles.hpp  VertexGenerator.hpp  Window.hpp  shapegl.hpp
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
platform/mac/: libGL.dylib  libGLU.dylib
resources/: minimal-example.cpp
shaders/: default.frag  default.vert
src/: Circle.cpp  CollisionTree.cpp  Color.cpp  Component.cpp  Debug.cpp  DebugKeyHandler.cpp  Entity.cpp  FileUtil.cpp  GLHandlerImpl.cpp  GLRenderObject.cpp  Game.cpp  Globals.cpp  Input.cpp  MultiShape.cpp  NullRenderer.cpp  NullWindow.cpp  Object.cpp  Point.cpp  Position.cpp  Quad.cpp  Rectangle.cpp  RenderPackage.cpp  Scene.cpp  Shape.cpp  ShapePair.cpp  SimpleCollision.cpp  Square.cpp  Timer.cpp  Tree.cpp  Triangle.cpp  TriangleIsosceles.cpp  VertexGenerator.cpp  Window.cpp
test/: CMakeLists.txt  Color.test.cpp  FileUtil  FileUtil.test.cpp  Makefile  Object.test.cpp  SConstruct  ShaderHandler.test.cpp  Shape.test.cpp  compile.rb
tests/: .sconsign.dblite  CMakeLists.txt  CollisionTree.test.cpp  FileUtil.test.cpp  Makefile  MultiShape.test.cpp  Object.test.cpp  Position.test.cpp  RenderPackage.test.cpp  Shape.test.cpp  Triangle.test.cpp  catch-tests.cpp  massif.out.75461  null-main.test.cpp  simple-glfw.cpp  test_deletion.cpp
tests/dummy-data/: lines.txt
tests/shaders/: default.frag
tests/test_exes/: catch-tests
tools/: build-and-zip.py  concat-headers.py  instructions.txt  linux-link-test.sh  mac-link-test.sh  new2unique.py  util.py  zip-dist.py  zip_dist.py
